2005-12-16  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for Xutf8LookupString
	* Source/x11/XIMInputServer.m: Use it.

2005-12-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-titlewindow::): Use UTF8 window
	title where possible.

2005-11-20  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for winlib as well so we don't get invalid
	backend.

2005-11-19 21:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (flip_bytes, byte_order)
	(-initWithContextInfo:): Detect if the server doesn't have the same
	endianness and adjust the color bitmasks if necessary.

2005-11-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-window::::): Don't use the NET WM
	window icon for Window Maker. 
	* Source/x11/XGServerWindow.m (_createNetIcon:::, _setNetWMIconFor:):
	Rewrote this methods to be prepared to use the mini window icon,
	when that gets available in back.

2005-11-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/art/composite.m:
	* Source/art/ftfont-old.m:
	* Source/art/ftfont.m:
	* Source/art/shfill.m:
	* Source/cairo/CairoDevice.m:
	* Source/cairo/CairoFreeTypeFontInfo.m:
	* Source/cairo/CairoGState.m:
	* Source/gsc/GSContext.m:
	* Source/gsc/GSStreamContext.m:
	* Source/win32/GSDisplayServer_details.m:
	* Source/win32/WIN32Server.m:
	* Source/win32/w32_activate.m:
	* Source/win32/w32_debug.m:
	* Source/win32/w32_movesize.m:
	* Source/win32/w32_notifications.m:
	* Source/win32/w32_windowdisplay.m:
	* Source/winlib/WIN32GState.m:
	* Source/x11/XGGLContext.m:
	* Source/x11/XGGLFormat.m:
	* Source/x11/XGServerEvent.m:
	* Source/x11/XGServerWindow.m:
	* Source/xdps/AFMFileFontInfo.m:
	* Source/xdps/NSDPSContext.m:
	* Source/xdps/NSDPSContextOps.m:
	* Source/xlib/XGBitmap.m:
	* Source/xlib/XGCommonFont.m:
	* Source/xlib/XGFontSetFontInfo.m:
	* Source/xlib/XGGState.m:
	* Tools/font_cacher.m:
	* Tools/xpbs.m:
	Some fixups for coding style violations.  Should have no effect other