@@ -1,3 +1,9 @@
+2005-12-20  Adam Fedor  <fedor@gnu.org>
+
+	* Source/art/ARTContext.m ([ARTContext -beep]): Respect user setting
+	of bell volume.
+	* Source/x11/XGServe.m: Idem.
+
 2005-12-16  Adam Fedor  <fedor@gnu.org>
 
 	* configure.in: Check for Xutf8LookupString
